syntax = "proto3";

package kvstore;

option go_package = "kvstore/proto";

// The key-value store service definition
service KeyValueStore {
  rpc Put (PutRequest) returns (PutResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
  rpc List (ListRequest) returns (ListResponse);
}

// Messages for requests and responses
message PutRequest {
  string key = 1;
  string value = 2;
  bool isReplica = 3; // true when this call is a replication
}

message PutResponse {
  string message = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}

message DeleteRequest {
  string key = 1;
  bool isReplica = 2; // true when this call is a replication
}

message DeleteResponse {
  string message = 1;
}

message ListRequest {}

message ListResponse {
  map<string, string> store = 1;
}
